src/App.scss
/* ... */
.changeWeekList {
  display: none;
  &__buttons {
    display: flex;
    justify-content: center;
    gap: 5px;
    flex-wrap: wrap;
    margin-bottom: 10px;
    &__button {
      padding: 2px 10px;
      border-radius: 8px;
      -webkit-border-radius: 8px;
      -moz-border-radius: 8px;
      -ms-border-radius: 8px;
      -o-border-radius: 8px;
      :hover {
        cursor: pointer;
      }
    }
  }
}

.TodoWrapper {
  h1 {
    margin-bottom: 0.5rem;
    font-size: 3.2em;
    letter-spacing: 0.1em;
  }
  text-align: center;
  position: relative;
  margin: auto;
  padding: 0.8rem 0;
  border-radius: 5px;
  width: 99%;
  min-height: 90vh;
  border-radius: 8px;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -ms-border-radius: 8px;
  -o-border-radius: 8px;
}

//TODOFORM animation hover
.TodoForm {
  box-shadow: 2px 1px 1px rgba(24, 24, 24, 0.384);
  position: relative;
  overflow: hidden;
  &__overlay {
    position: absolute;
    background-color: rgba(250, 250, 250, 0.217);
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: 1;
    width: 100%;
  }
  &:hover {
    box-shadow: 4px 4px 4px rgba(24, 24, 24, 0.384);
    transform: scale(1.01);
    -webkit-transform: scale(1.01);
    -moz-transform: scale(1.01);
    -ms-transform: scale(1.01);
    -o-transform: scale(1.01);
  }
  transition: box-shadow 0.5s, transform 0.5s;
  -webkit-transition: box-shadow 0.5s, transform 0.5s;
  -moz-transition: box-shadow 0.5s, transform 0.5s;
  -ms-transition: box-shadow 0.5s, transform 0.5s;
  -o-transition: box-shadow 0.5s, transform 0.5s;
}

//PERSONAL LINKS
.personal-links {
  display: flex;
  justify-content: center;
  gap: 10px;
  svg:hover {
    opacity: 0.8;
  }
}

/*Effects shared between Creating forms and Editing Forms*/
.TodoForm,
.EditTodoForm,
.TypeForm {
  width: 95%;
  display: flex;
  flex-direction: column;
  margin: 2% auto 2%;
  padding: 3% 1.8%;
  &__TaskReminder {
    display: flex;
    justify-content: left;
    gap: 3px;
  }
  &__Task {
    z-index: 2;
    display: flex;
    justify-content: center;
    margin-top: 1rem;
    margin-bottom: 0.5rem;
    &__input {
      outline: none;
      background: #fff;
      border: 1px solid #fff;
      padding: 0.5rem 1rem;
      width: clamp(150px, 19em, 500px);
      color: black;
      flex: auto;
    }
    &__input:focus {
      transform: scale(1.02);
      -webkit-transform: scale(1.02);
      -moz-transform: scale(1.02);
      -ms-transform: scale(1.02);
      -o-transform: scale(1.02);
      box-shadow: 3px 2px 2px rgba(24, 24, 24, 0.384);
      transition: box-shadow 1s transform 1s;
      -webkit-transition: box-shadow 1s transform 1s;
      -moz-transition: box-shadow 1s transform 1s;
      -ms-transition: box-shadow 1s transform 1s;
      -o-transition: box-shadow 1s transform 1s;
    }
    &__input:focus ~ button {
      transform: scale(1.02);
      -webkit-transform: scale(1.02);
      -moz-transform: scale(1.02);
      -ms-transform: scale(1.02);
      -o-transform: scale(1.02);
      box-shadow: 3px 2px 2px rgba(24, 24, 24, 0.384);
      transition: box-shadow 1s transform 1s;
      -webkit-transition: box-shadow 1s transform 1s;
      -moz-transition: box-shadow 1s transform 1s;
      -ms-transition: box-shadow 1s transform 1s;
      -o-transition: box-shadow 1s transform 1s;
    }
  }
  &__CatDate {
    z-index: 2;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-left: 10px;
    padding-right: 10px;
    align-items: baseline;
    gap: 5px;
    input,
    select {
      background: rgba(95, 95, 95, 0.69);
      color: white;
      border: 1px solid #313131;
      padding: 0.1rem 0.1rem;
      border-radius: 0px;
      -webkit-border-radius: 0px;
      -moz-border-radius: 0px;
      -ms-border-radius: 0px;
      -o-border-radius: 0px;
    }
    select option {
      background: #fff;
      border: 1px solid #313131;
      padding: 0.1rem 0.1rem;
      color: black;
    }
  }
  border-radius: 10px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;
}
/*Effects only for the editing forms*/
.EditTodoForm {
  width: 99%;
  margin: 2px auto;
  padding-bottom: 1rem;
  border: 1px solid rgba(26, 26, 26, 0.473);
  box-shadow: 2px 1px 1px rgba(24, 24, 24, 0.384);
  border-radius: 2px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  &__Task {
    width: 98%;
    margin-left: auto;
    margin-right: auto;
  }
}

/*Effects only for the Type-category creating forms*/
.TypeForm {
  .type-form-organizer {
    display: flex;
    height: 40px;
    width: 100%;

    input[type="color"] {
      height: 95%;
      width: 38px;
      background: none;
      border: 2px solid #f2f2f2;
      position: relative;
      &::after {
        position: absolute;
        content: "color";
      }
    }
    input[type="text"] {
      margin-top: 0;
      height: 100%;
      flex: auto;
      background: white;
      color: black;
      padding-left: 5px;
    }
  }
  &__icons {
    margin: 10px 5% 0;
    justify-content: space-between;
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    svg {
      height: 20px;
      padding: 5px;
      border-radius: 5px;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      -ms-border-radius: 5px;
      -o-border-radius: 5px;
    }
    :hover {
      cursor: pointer;
    }
  }
}

.date-title {
  text-align: left;
}

.todo-input::placeholder {
  color: #ffffff4d;
}

.add-btn {
  font-size: 0.8em;
  overflow: hidden;
  color: #fff;
  border: none;
  padding: 0.4rem;
  cursor: pointer;
  vertical-align: middle;
  border-radius: 2px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  &:active {
    animation: growBTN 0.2s linear forwards;
    -webkit-animation: growBTN 0.2s linear forwards;
  }
}
/* ... */

